# atlas

./: .gitignore  404.html  CLAUDE.md  COMMIT_RULES.md  DEVELOPMENT.md  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  module.yml
.github/workflows/: ci.yml  docs.yml
.zed/: settings.json
api/categories/: index.html
api/cli/: index.html
api/config/: index.html
api/detection/: index.html
api/modules/: index.html
api/parser/: index.html
api/registry/: index.html
api/retrieve/: index.html
api/runner/: index.html
api/runtime/: index.html
api/scanner/: index.html
api/server/: index.html
commit-rules/: index.html
development/: index.html
docs/: commit-rules.md  index.md
docs/api/: categories.md  cli.md  config.md  detection.md  modules.md  parser.md  registry.md  retrieve.md  runner.md  runtime.md  scanner.md  server.md
docs/guides/: api.md  configuration.md  contributing.md  how-it-works.md  installation.md  modules.md  quickstart.md
docs/plans/: 2026-02-21-conflict-tests-design.md  2026-02-21-conflict-tests-plan.md  2026-02-22-auto-brief-prompt-design.md  2026-02-22-auto-brief-prompt-plan.md  2026-02-22-drift-scenarios-design.md  2026-02-22-drift-scenarios-plan.md  2026-02-22-error-augmentation-design.md  2026-02-22-quick-git-status-design.md  2026-02-22-read-recent-history-design.md  2026-02-22-session-brief-content-design.md
docs/reference/: modules-overview.md
guides/api/: index.html
guides/configuration/: index.html
guides/contributing/: index.html
guides/how-it-works/: index.html
guides/installation/: index.html
guides/modules/: index.html
guides/quickstart/: index.html
modules/: registry.json
modules/databases/postgresql/: module.json  rules.md
modules/environments/docker/: module.json  rules.md
modules/formatters/prettier/: module.json  rules.md
modules/formatters/rustfmt/: module.json  rules.md
modules/languages/go/: module.json  rules.md
modules/languages/python/: module.json  rules.md
modules/languages/rust/: module.json  rules.md
modules/languages/typescript/: module.json  rules.md
modules/linters/biome/: module.json  rules.md
modules/linters/clippy/: module.json  rules.md
modules/linters/eslint/: module.json  rules.md
modules/linters/golangci-lint/: module.json  rules.md
modules/linters/ruff/: module.json  rules.md
modules/pkg-managers/npm/: module.json  rules.md
modules/pkg-managers/pnpm/: module.json  rules.md
modules/pkg-managers/uv/: module.json  rules.md
modules/testing/jest/: module.json  rules.md
modules/testing/pytest/: module.json  rules.md
modules/testing/vitest/: module.json  rules.md
modules/vcs/git/: module.json  rules.md
plans/2026-02-21-conflict-tests-design/: index.html
plans/2026-02-21-conflict-tests-plan/: index.html
plans/2026-02-22-auto-brief-prompt-design/: index.html
plans/2026-02-22-auto-brief-prompt-plan/: index.html
plans/2026-02-22-drift-scenarios-design/: index.html
plans/2026-02-22-drift-scenarios-plan/: index.html
plans/2026-02-22-error-augmentation-design/: index.html
plans/2026-02-22-quick-git-status-design/: index.html
plans/2026-02-22-read-recent-history-design/: index.html
plans/2026-02-22-session-brief-content-design/: index.html
reference/modules-overview/: index.html
search/: search_index.json
src/atlas/: cli.py  parser.py  runtime.py  server.py
src/atlas/core/: categories.py  config.py  detection.py  drift.py  errors.py  models.py  modules.py  registry.py  retrieve.py  runner.py  scanner.py  system.py
tests/: test_augmentation.py  test_categories.py  test_cli.py  test_config.py  test_conflicts.py  test_detection.py  test_drift.py  test_drift_scenarios.py  test_git_status.py  test_history.py  test_modules.py  test_parser.py  test_registry.py  test_retrieve.py  test_runner.py  test_runtime.py  test_scanner.py  test_server.py  test_smoke.py
tests/fixtures/python_project/: pyproject.toml
tests/fixtures/python_project/src/python_project/: __init__.py
tests/fixtures/typescript_project/: eslint.config.js  package.json
