[project]
name = "atlas"
version = "0.1.0"
description = "MCP server that gives AI coding agents structured project knowledge"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
