[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sample-python-project"
version = "0.1.0"
description = "Sample Python project fixture for Atlas tests"
requires-python = ">=3.10"

[tool.hatch.build.targets.wheel]
packages = ["src/python_project"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
